# Orbit_Wars

./: .gitignore  .mcp.json  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
docs/blog/: diagrams_review.md  lumen_mermaid_guide.md  spec.md
docs/competition_documentation/: Orbit_Wars-competition_overview_and_rules.md  Orbit_Wars-game_and_agents_overviews.md  Orbit_Wars-important_links.md
docs/internal/: CUDA_CHECK.md
docs/iteration_logs/: 2026-05-05-sim-day-3-5-gate.md  2026-05-05-sim-day-5-7-gate.md  2026-05-05-sim-day-7-9-gate.md  2026-05-05-sim-day-9-11-gate.md  2026-05-06-env-upgrade-master.md
docs/research_documents/: 2026-05-05-mcts-path-a-c-kickoff.md  2026-05-05-plan-a-tuner-4p-retool.md  2026-05-05-plan-c-day-3-5-minimal-sim.md  2026-05-06-mcts-algorithm-design.md  2026-05-06-mcts-option2-tokens-design.md  AI_Heuristics_for_Opponent_Analysis.md  Comprehensive Research Report on Heuristic Algorithms and Design Frameworks for Tracking Mechanics, Players, and Objectives in Interactive Environments.md  ParamSpace_meta.md  heuristic_algorithm_improvement_better_research.md  heuristic_algorithm_research_links.md  mcts_forward_model_design.md  phase2_results.md  phase2_step4_status.md  research_findings.md
images/: romantamrazov_notebook.py
notebooks/: api-download-replay-orbit-wars.ipynb
src/: main.py
src/modal_examples/: modal-project_claude_notes.md  modal_app.py  modal_finetune.py  modal_finetune_multilingual.py  modal_finetune_plain.py  modal_generate_training.py  modal_review_existing.py
src/orbit_wars/: __init__.py  geometry.py  rotation.py  state.py  world.py
src/tools/: __init__.py  cli.py  diagnostic.py  download_replays.py  heuristic_tuner_param_space.py  mcts_local_ab.py  mcts_picks_diag.py  modal_tuner.py  onnx_quantizer.py  (+9 more)
tests/: test_geometry.py  test_heuristic_tuner.py  test_mcts_m1_skeleton.py  test_mcts_m3_pw_fpu.py  test_mcts_node_tokens.py  test_mcts_perturbation_variants.py  test_mcts_search_tokens.py  test_mcts_serialize.py  test_mcts_token.py  test_mcts_tokens.py  test_opponents.py  test_rotation.py  test_sim.py  test_sim_integration.py  test_sim_phases.py  test_sim_validator.py  test_world.py
(+138 files in other folders)
