[project]
name = "Orbit_Wars"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13, <3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.5",
    "kaggle>=2.0.2",
    "matplotlib>=3.10.8",
    "pandas==2.3.3",
    "python-dotenv==1.2.2",
    "numpy==2.2.6",
    "tensorflow[and-cuda]>=2.21.0",
    "scikit-learn>=1.8.0",
    "plotly>=6.6.0",
    "pandas-stubs~=2.3.3",
    "torch>=2.6.0",
    "scipy-stubs~=1.17.1",
    "statsmodels>=0.14.6",
    "cudf-cu12==26.2.*",
    "dask-cudf-cu12==26.2.*",
    "cuml-cu12==26.2.*",
    "cugraph-cu12==26.2.*",
    "nx-cugraph-cu12==26.2.*",
    "cuxfilter-cu12==26.2.*",
    "cucim-cu12==26.2.*",
    "pylibraft-cu12==26.2.*",
    "raft-dask-cu12==26.2.*",
    "cuvs-cu12==26.2.*",
    "kagglehub>=1.0.1",
    "kaggle-environments>=1.29.0",
    "gymnasium>=1.2.0",
    "typer>=0.25.0",
    "rich>=14.3.3",
    "hypothesis>=6.152.4",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "ty>=0.0.33",
    "pyyaml>=6.0.3",
    "modal>=1.4.2",
    "cma>=3.3.0",
    "onnxruntime>=1.26.0",
    "onnxscript>=0.7.0",
    "onnx>=1.21.0",
    "torchvision>=0.24.1",
]

[project.optional-dependencies]
remote = ["modal>=0.69.0"]

[project.scripts]
orbit-play = "tools.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/orbit_wars", "src/tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RET", "PT", "PL"]
ignore = ["PLR0913", "PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (run with -m slow)"]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
kaggle-environments = { git = "https://github.com/Kaggle/kaggle-environments.git", rev = "master" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "nvidia-pypi"
url = "https://pypi.nvidia.com"
